--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-midnight
+remote_theme: jekyll-theme-dinky
 title: "FootPage"
 gitorg: "https://github.com/jm1021/leuck_reunion"
 description: "Stories for people, by people"
