--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
-theme: jekyll-theme-dinky
+remote_theme: pages-themes/dinky@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 title: "FootPage"
 gitorg: "https://github.com/jm1021/leuck_reunion"
 description: "Stories for people, by people"
